--- a/Infortainment_Control/app/src/main/res/layout/tv_layout.xml
+++ b/Infortainment_Control/app/src/main/res/layout/tv_layout.xml
@@ -6,45 +6,48 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="60dp"
         android:orientation="horizontal"
         android:weightSum="1">
 
         <Button
             android:id="@+id/power_btn"
-            android:layout_width="65dp"
-            android:layout_height="65dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_marginLeft="10dp"
             android:background="@drawable/button_round_red"
+            android:drawableTop="@drawable/ic_power_settings_new_black_24px"
+            android:paddingTop="18sp"
             android:shadowColor="#A8A8A8"
             android:shadowDx="0"
             android:shadowDy="0"
             android:shadowRadius="5"
-            android:text="Power"
             android:textColor="#FFFFFF"
             android:textSize="15sp" />
 
         <Button
             android:id="@+id/source_btn"
-            android:layout_width="65dp"
-            android:layout_height="65dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_alignParentRight="true"
             android:layout_marginRight="10dp"
             android:background="@drawable/button_round_white"
+            android:drawableTop="@drawable/ic_input_black_24px"
+            android:paddingTop="18sp"
             android:shadowColor="#A8A8A8"
             android:shadowDx="0"
             android:shadowDy="0"
             android:shadowRadius="5"
-            android:text="Source"
-            android:textColor="#141414"
-            android:textSize="15sp" />
+            android:textColor="#FFFFFF"
+            android:textSize="10sp"
+            />
 
     </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/top"
         android:layout_width="match_parent"
-        android:layout_height="180dp">
+        android:layout_height="160dp">
 
         <LinearLayout
             android:id="@+id/center_point"
@@ -68,18 +71,18 @@
 
                 <Button
                     android:id="@+id/volume_up_btn"
-                    android:layout_width="65dp"
-                    android:layout_height="65dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_alignParentRight="true"
                     android:layout_marginLeft="10dp"
-                    android:background="@drawable/button_round_gray"
                     android:shadowColor="#A8A8A8"
+                    android:background="@drawable/button_round_gray"
                     android:shadowDx="0"
                     android:shadowDy="0"
                     android:shadowRadius="5"
                     android:text="+"
                     android:textColor="#FFFFFF"
-                    android:textSize="45sp" />
+                    android:textSize="25sp" />
 
                 <TextView
                     android:id="@+id/volume_label"
@@ -94,21 +97,21 @@
 
                 <Button
                     android:id="@+id/volume_down_btn"
-                    android:layout_width="65dp"
-                    android:layout_height="65dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_alignParentRight="true"
                     android:layout_below="@id/volume_label"
                     android:layout_marginLeft="10dp"
-                    android:background="@drawable/button_round_gray"
                     android:gravity="center"
                     android:shadowColor="#A8A8A8"
                     android:shadowDx="0"
                     android:shadowDy="0"
                     android:shadowRadius="5"
+                    android:background="@drawable/button_round_gray"
                     android:text="-"
                     android:textColor="#FFFFFF"
 
-                    android:textSize="55sp" />
+                    android:textSize="35sp" />
 
 
             </RelativeLayout>
@@ -131,15 +134,16 @@
 
                 <Button
                     android:id="@+id/channel_up_btn"
-                    android:layout_width="65dp"
-                    android:layout_height="65dp"
-                    android:layout_marginLeft="10dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+
                     android:background="@drawable/button_round_gray"
+                    android:drawableTop="@drawable/ic_keyboard_arrow_up_white_24px"
+                    android:paddingTop="18sp"
                     android:shadowColor="#A8A8A8"
                     android:shadowDx="0"
                     android:shadowDy="0"
                     android:shadowRadius="5"
-                    android:text="^"
                     android:textColor="#FFFFFF"
                     android:textSize="45sp" />
 
@@ -148,23 +152,22 @@
                     android:layout_width="match_parent"
                     android:layout_height="24dp"
                     android:layout_below="@id/channel_up_btn"
-                    android:paddingLeft="10dp"
                     android:text="Channel"
                     android:textSize="18sp" />
 
                 <Button
                     android:id="@+id/channel_down_btn"
-                    android:layout_width="65dp"
-                    android:layout_height="65dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_below="@id/channel_label"
-                    android:layout_marginLeft="10dp"
                     android:background="@drawable/button_round_gray"
+                    android:drawableTop="@drawable/ic_keyboard_arrow_down_white_24px"
+                    android:paddingTop="18sp"
                     android:gravity="center"
                     android:shadowColor="#A8A8A8"
                     android:shadowDx="0"
                     android:shadowDy="0"
                     android:shadowRadius="5"
-                    android:text="V"
                     android:textColor="#FFFFFF"
                     android:textSize="30dp" />
 
@@ -176,13 +179,13 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="50dp"
         android:gravity="center">
 
         <Button
-            android:id="@+id/topmenu_btn"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
+            android:id="@+id/menu_btn"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:background="@drawable/button_round_gray"
             android:gravity="center"
             android:shadowColor="#A8A8A8"
@@ -191,29 +194,29 @@
             android:shadowRadius="5"
             android:text="Menu"
             android:textColor="#FFFFFF"
-            android:textSize="13dp" />
+            android:textSize="12dp" />
 
         <Button
             android:id="@+id/directional_up_btn"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:background="@drawable/button_round_white"
+            android:drawableTop="@drawable/ic_keyboard_arrow_up_black_24px"
+            android:paddingTop="12sp"
             android:gravity="center"
-            android:layout_toRightOf="@id/topmenu_btn"
+            android:layout_toRightOf="@id/menu_btn"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
             android:shadowColor="#A8A8A8"
             android:shadowDx="0"
             android:shadowDy="0"
             android:shadowRadius="5"
-            android:text="^"
-            android:textColor="#000000"
             android:textSize="30dp" />
 
         <Button
             android:id="@+id/tools_btn"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:background="@drawable/button_round_gray"
             android:gravity="center"
             android:layout_toRightOf="@id/directional_up_btn"
@@ -223,26 +226,27 @@
             android:shadowRadius="5"
             android:text="Tools"
             android:textColor="#FFFFFF"
-            android:textSize="13dp" />
+            android:textSize="12dp" />
 
 
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="50dp"
         android:gravity="center">
 
         <Button
             android:id="@+id/directional_left_btn"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:background="@drawable/button_round_white"
+            android:drawableTop="@drawable/ic_keyboard_arrow_left_black_24px"
+            android:paddingTop="14sp"
             android:gravity="center"
             android:shadowColor="#A8A8A8"
             android:shadowDx="0"
             android:shadowDy="0"
             android:shadowRadius="5"
-            android:text="L"
             android:textColor="#000000"
             android:textSize="30dp" />
         <Button
@@ -250,8 +254,8 @@
             android:text="OK"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="5dp"
@@ -265,17 +269,18 @@
             />
         <Button
             android:id="@+id/directional_right_btn"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
 
             android:layout_toRightOf="@id/ok_btn"
             android:background="@drawable/button_round_white"
+            android:drawableTop="@drawable/ic_keyboard_arrow_right_black_24px"
+            android:paddingTop="14sp"
             android:gravity="center"
             android:shadowColor="#A8A8A8"
             android:shadowDx="0"
             android:shadowDy="0"
             android:shadowRadius="5"
-            android:text="R"
             android:textColor="#000000"
             android:textSize="30dp" />
 
@@ -283,13 +288,13 @@
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="50dp"
         android:gravity="center">
 
         <Button
             android:id="@+id/return_btn"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/button_round_gray"
             android:gravity="center"
@@ -303,9 +308,11 @@
 
         <Button
             android:id="@+id/directional_down_btn"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:background="@drawable/button_round_white"
+            android:drawableTop="@drawable/ic_keyboard_arrow_down_black_24px"
+            android:paddingTop="17sp"
             android:gravity="center"
             android:layout_toRightOf="@id/return_btn"
             android:layout_marginLeft="50dp"
@@ -314,14 +321,13 @@
             android:shadowDx="0"
             android:shadowDy="0"
             android:shadowRadius="5"
-            android:text="V"
             android:textColor="#000000"
             android:textSize="20dp" />
 
         <Button
             android:id="@+id/exit_btn"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:background="@drawable/button_round_gray"
             android:gravity="center"
             android:layout_marginTop="10dp"
@@ -339,29 +345,30 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="95dp"
-        android:paddingTop="30dp"
+        android:layout_height="90dp"
+        android:paddingTop="20dp"
         android:gravity="center">
 
         <Button
             android:id="@+id/mute_btn"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_marginTop="2dp"
             android:background="@drawable/button_round_white"
+            android:drawableTop="@drawable/ic_volume_off_black_24px"
+            android:paddingTop="13sp"
             android:gravity="center"
             android:shadowColor="#A8A8A8"
             android:shadowDx="0"
             android:shadowDy="0"
             android:shadowRadius="5"
-            android:text="Mute"
             android:textColor="#000000"
             android:textSize="13dp" />
 
         <Button
             android:id="@+id/numpad_btn"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
             android:background="@drawable/button_square_gray"
             android:gravity="center"
             android:layout_toRightOf="@id/mute_btn"
@@ -371,14 +378,14 @@
             android:shadowDx="0"
             android:shadowDy="0"
             android:shadowRadius="5"
-            android:text="123..."
+            android:text="1  2  3\n4  5  6\n7  8  9"
             android:textColor="#FFFFFF"
-            android:textSize="20dp" />
+            android:textSize="14dp" />
 
         <Button
             android:id="@+id/info_btn"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:background="@drawable/button_round_white"
             android:gravity="center"
             android:layout_marginTop="2dp"
