--- a/Infortainment_Control/app/src/main/res/drawable/ic_keyboard_arrow_down_white_24px.xml
+++ b/Infortainment_Control/app/src/main/res/drawable/ic_keyboard_arrow_down_white_24px.xml
@@ -4,6 +4,6 @@
         android:viewportWidth="24.0"
         android:viewportHeight="24.0">
     <path
-        android:pathData="M6,6h2v12L6,18zM9.5,12l8.5,6L18,6z"
+        android:pathData="M7.41,7.84L12,12.42l4.59,-4.58L18,9.25l-6,6 -6,-6z"
         android:fillColor="#FFFFFF"/>
 </vector>
