--- a/Infortainment_Control/app/src/main/res/drawable/ic_keyboard_arrow_right_white_24px.xml
+++ b/Infortainment_Control/app/src/main/res/drawable/ic_keyboard_arrow_right_white_24px.xml
@@ -4,6 +4,6 @@
         android:viewportWidth="24.0"
         android:viewportHeight="24.0">
     <path
-        android:pathData="M6,6h2v12L6,18zM9.5,12l8.5,6L18,6z"
+        android:pathData="M8.59,16.34l4.58,-4.59 -4.58,-4.59L10,5.75l6,6 -6,6z"
         android:fillColor="#FFFFFF"/>
 </vector>
